Fix #317, change to "overflow: visible".

--- a/assets/stylesheets/issue_templates.css
+++ b/assets/stylesheets/issue_templates.css
@@ -156,7 +156,7 @@ a.template_tooltip {
 }
 
 table.list {
-    overflow: overlay;
+    overflow: visible;
     border: 2px solid #e4e4e4;
 }
 
@@ -164,7 +164,7 @@ table.list.template_list {
     width: 480px;
     margin: 8px 0;
     border: 2px solid #e4e4e4;
-    overflow: overlay;
+    overflow: visible;
 }
 
 td.template_title {
